--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -26,17 +26,25 @@ REGION: Hanoi
 MGNT_IF: eth0
 DATA_IF: eth1
 FLAT_IF: eth2
-FLAT_NETMASK: 255.255.255.0
 
 
+
+
+
+
+### Do not touch :(
+### IP setup var
+MGNT_IP: "{{ hostvars[inventory_hostname]['ansible_' + MGNT_IF]['ipv4']['address'] }}"
+DATA_IP: "{{ hostvars[inventory_hostname]['ansible_' + DATA_IF]['ipv4']['address'] }}"
+FLAT_IP: "{{ hostvars[inventory_hostname]['ansible_' + FLAT_IF]['ipv4']['address'] }}"
+#### MGNT NETWORK setup var
 MGNT_NETWORK: "{{  hostvars[inventory_hostname]['ansible_' + MGNT_IF]['ipv4']['network'] }}"
 MGNT_IPADD: "{{ MGNT_NETWORK }}/{{ MGNT_NETMASK }}"
 MGNT_CIDR: "{{ MGNT_IPADD | ipaddr('net') }}"
 MGNT_NETMASK: "{{  hostvars[inventory_hostname]['ansible_' + MGNT_IF]['ipv4']['netmask'] }}" 
-###
-MGNT_IP: "{{ hostvars[inventory_hostname]['ansible_' + MGNT_IF]['ipv4']['address'] }}"
-DATA_IP: "{{ hostvars[inventory_hostname]['ansible_' + DATA_IF]['ipv4']['address'] }}"
-FLAT_IP: "{{ hostvars[inventory_hostname]['ansible_' + FLAT_IF]['ipv4']['address'] }}"
+#### FLAT NETWORK setup var
+FLAT_NETMASK: "{{  hostvars[inventory_hostname]['ansible_' + FLAT_IF]['ipv4']['netmask'] }}"
+
 
 
 
