--- a/roles/install_nova/tasks/config_nova.yml
+++ b/roles/install_nova/tasks/config_nova.yml
@@ -1,110 +1,7 @@
 ---
-- name: Config section DEFAUTL
-  ini_file: 
-    path: /etc/nova/nova.conf
-    section: DEFAULT
-    option: "{{ item.key }}"
-    value: "{{ item.value }}"
-  with_dict: '{{ DEFAULT }}'
+- name: Config file nova.conf
+  template:
+    src: nova.conf.j2
+    dest: /etc/nova/nova.conf
 
-- name: Config section api
-  ini_file:
-    path: /etc/nova/nova.conf
-    section: api
-    option: "{{ item.key }}"
-    value: "{{ item.value }}"
-  with_dict: '{{ api }}'
-
-- name: Config section api_database
-  ini_file:
-    path: /etc/nova/nova.conf
-    section: api_database
-    option: "{{ item.key }}"
-    value: "{{ item.value }}"
-  with_dict: '{{ api_database }}'
-
-
-- name: Config section database
-  ini_file:
-    path: /etc/nova/nova.conf
-    section: database
-    option: "{{ item.key }}"
-    value: "{{ item.value }}"
-  with_dict: '{{ database }}'
-
-- name: Config section cache
-  ini_file:
-    path: /etc/nova/nova.conf
-    section: cache
-    option: "{{ item.key }}"
-    value: "{{ item.value }}"
-  with_dict: '{{ cache }}'
-
-
-- name: Config section oslo_messaging_notifications
-  ini_file:
-    path: /etc/nova/nova.conf
-    section: oslo_messaging_notifications
-    option: "{{ item.key }}"
-    value: "{{ item.value }}"
-  with_dict: '{{ oslo_messaging_notifications }}'
-
-- name: Config section keystone_authtoken
-  ini_file:
-    path: /etc/nova/nova.conf
-    section: keystone_authtoken
-    option: "{{ item.key }}"
-    value: "{{ item.value }}"
-  with_dict: '{{ keystone_authtoken }}'
-
-- name: Config section vnc
-  ini_file:
-    path: /etc/nova/nova.conf
-    section: vnc
-    option: "{{ item.key }}"
-    value: "{{ item.value }}"
-  with_dict: '{{ vnc }}'
-
-
-- name: Config section glance
-  ini_file:
-    path: /etc/nova/nova.conf
-    section: glance
-    option: "{{ item.key }}"
-    value: "{{ item.value }}"
-  with_dict: '{{ glance }}'
-
-
-- name: Config section oslo_concurrency
-  ini_file:
-    path: /etc/nova/nova.conf
-    section: oslo_concurrency
-    option: "{{ item.key }}"
-    value: "{{ item.value }}"
-  with_dict: '{{ oslo_concurrency }}'
-
-- name: Config section placement
-  ini_file:
-    path: /etc/nova/nova.conf
-    section: placement
-    option: "{{ item.key }}"
-    value: "{{ item.value }}"
-  with_dict: '{{ placement }}'
-
-- name: Config section cinder
-  ini_file:
-    path: /etc/nova/nova.conf
-    section: cinder
-    option: "{{ item.key }}"
-    value: "{{ item.value }}"
-  with_dict: '{{ cinder }}'
-
-
-- name: Config section neutron
-  ini_file:
-    path: /etc/nova/nova.conf
-    section: neutron
-    option: "{{ item.key }}"
-    value: "{{ item.value }}"
-  with_dict: '{{ neutron }}'
 
