--- a/roles/install_ntp/handlers/main.yml
+++ b/roles/install_ntp/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: restart chrony.service
   systemd:
-    name: chronyd.service
-    state: started
+    state: restarted
     enabled: yes
+    name: chronyd.service
