--- a/Deploy_OPS_main.yml
+++ b/Deploy_OPS_main.yml
@@ -1,13 +1,21 @@
 ---
+- name: Garther_facts
+  hosts: all
+  tasks:
+    - name: Group hosts to determine when using --limit
+      group_by:
+        key: "all_using_limit_{{ (ansible_play_batch | length) != (groups['all'] | length) }}"
+  tags: always
+
 - name: Apply role baremental
-  gather_facts: true
+  gather_facts:  false
   become: true
   hosts: all
   roles:
     - { role: baremental,
         tags: baremental }
 - name: Apply role chrony
-  gather_facts: true
+  gather_facts: false
   become: true
   hosts: all
   roles:
@@ -15,7 +23,7 @@
         tags: install_ntp }
 
 - name: Apply role Rabbimq
-  gather_facts: true
+  gather_facts: false
   become: true
   hosts: controller
   roles:
@@ -23,21 +31,21 @@
         tags: install_rabbitmq }
 
 - name: Apply role Mariadb
-  gather_facts: true
+  gather_facts: false
   become: true
   hosts: controller
   roles:
     - { role: install_mariadb,
         tags: install_mariadb }
 - name: Apply role Memcache
-  gather_facts: true
+  gather_facts: false
   become: true
   hosts: controller
   roles:
     - { role: install_memcached,
         tags: install_memcached }
 - name: Apply role HAproxy
-  gather_facts: true
+  gather_facts: false
   become: true
   hosts: controller
   roles:
@@ -45,7 +53,7 @@
         tags: install_haproxy }
 
 - name: Apply role Pacemaker
-  gather_facts: true
+  gather_facts: false
   become: true
   hosts: controller
   roles:
@@ -53,7 +61,7 @@
         tags: install_pacemaker }
 
 - name: Apply role Keystone
-  gather_facts: true
+  gather_facts: false
   become: true
   hosts: controller
   roles:
@@ -61,7 +69,7 @@
         tags: install_keystone }
 
 - name: Apply role Glance
-  gather_facts: true
+  gather_facts: false
   become: true
   hosts: controller
   roles:
@@ -69,7 +77,7 @@
         tags: install_glance }
 
 - name: Apply role Placement
-  gather_facts: true
+  gather_facts: false
   become: true
   hosts: controller
   roles:
@@ -77,7 +85,7 @@
         tags: install_placement }
 
 - name: Apply role Nova
-  gather_facts: true
+  gather_facts: false
   become: true
   hosts: controller
   roles:
@@ -85,7 +93,7 @@
         tags: install_nova }
 
 - name: Apply role Neutron
-  gather_facts: true
+  gather_facts: false
   become: true  
   hosts: controller
   roles:
@@ -93,7 +101,7 @@
         tags: install_neutron }
 
 - name: Apply role Horizon
-  gather_facts: true
+  gather_facts: false
   become: true
   hosts: controller
   roles:
