--- a/roles/install_pacemaker/tasks/config_cluster.yml
+++ b/roles/install_pacemaker/tasks/config_cluster.yml
@@ -1,11 +1,11 @@
 ---
 - name: Authorized cluster Only play on Master node
-  shell: pcs cluster auth {%- for item in groups['all'] %} {{  hostvars[item].inventory_hostname }}{% if not loop.last %} {% endif %}{% endfor %} -u"hacluster" -p"{{ corosync_pass }}"
+  shell: pcs cluster auth {%- for item in groups['controller'] %} {{  hostvars[item].inventory_hostname }}{% if not loop.last %} {% endif %}{% endfor %} -u"hacluster" -p"{{ corosync_pass }}"
   when: 
     - inventory_hostname_short ==  hostvars[groups['controller'][0]]['inventory_hostname_short']
 
 - name: Initialization cluster
-  shell: pcs cluster setup --name ha_cluster {%- for item in groups['all'] %} {{  hostvars[item].inventory_hostname| join('') }}{% if not loop.last %} {% endif %}{% endfor %}
+  shell: pcs cluster setup --name ha_cluster {%- for item in groups['controller'] %} {{  hostvars[item].inventory_hostname| join('') }}{% if not loop.last %} {% endif %}{% endfor %}
   when:
     - inventory_hostname_short ==  hostvars[groups['controller'][0]]['inventory_hostname_short']
 - name: Start Cluster
@@ -31,7 +31,7 @@
   when:
     - inventory_hostname_short ==  hostvars[groups['controller'][0]]['inventory_hostname_short']
 - name: Create Resource IP VIP Cluster
-  shell: pcs resource create vip_public ocf:heartbeat:IPaddr2 ip=192.168.10.150 cidr_netmask=24  meta migration-threshold=3 failure-timeout=60 resource-stickiness=1  op monitor interval=5 timeout=20 op start interval=0 timeout=30  op stop interval=0 timeout=30
+  shell: pcs resource create vip_public ocf:heartbeat:IPaddr2 ip={{ IP_VIP }} cidr_netmask={{ IP_VIP_NETMASK }}  meta migration-threshold=3 failure-timeout=60 resource-stickiness=1  op monitor interval=5 timeout=20 op start interval=0 timeout=30  op stop interval=0 timeout=30
   when:
     - inventory_hostname_short ==  hostvars[groups['controller'][0]]['inventory_hostname_short']
 - name: Create resource manage Haproxy
@@ -60,6 +60,10 @@
   when:
     - inventory_hostname_short ==  hostvars[groups['controller'][0]]['inventory_hostname_short']
 
+- name: sleep for 15s and continue with play
+  wait_for:
+    timeout: 15
+  delegate_to: localhost
 
 
 
