--- a/roles/install_rabbitmq/tasks/config_rabbitmq.yml
+++ b/roles/install_rabbitmq/tasks/config_rabbitmq.yml
@@ -8,22 +8,26 @@
     state: started
     enabled: yes
 
+- name: enable plugin rabbit_management
+  shell: rabbitmq-plugins enable rabbitmq_management
+
 - name: Stop all Rabbitmq Services
   systemd: 
     name: rabbitmq-server
     state: stopped
 
-- name: backup old erlang cookie
-  shell: cp -a /var/lib/rabbitmq/.erlang.cookie /var/lib/rabbitmq/.erlang.cookie.old
-  changed_when: false
 
-- name: test shell
-  shell: scp -p  /var/lib/rabbitmq/.erlang.cookie  root@{{ hostvars[groups['controller'][1]]['ansible_eth0']['ipv4']['address'] }}:/var/lib/rabbitmq/.erlang.cookie
+#- name: backup old erlang cookie
+#  shell: cp -a /var/lib/rabbitmq/.erlang.cookie /var/lib/rabbitmq/.erlang.cookie.old
+#  changed_when: false
+
+- name: Config Erlang for controller2
+  shell: scp -p  /var/lib/rabbitmq/.erlang.cookie  root@{{ hostvars[groups['controller'][1]]['ansible_' + MGNT_IF]['ipv4']['address'] }}:/var/lib/rabbitmq/.erlang.cookie
   when:
     - inventory_hostname_short == hostvars[groups['controller'][0]]['inventory_hostname_short']
 
-- name: test shell2
-  shell: scp -p  /var/lib/rabbitmq/.erlang.cookie  root@{{ hostvars[groups['controller'][2]]['ansible_eth0']['ipv4']['address'] }}:/var/lib/rabbitmq/.erlang.cookie
+- name: Config Erlang for controller3
+  shell: scp -p  /var/lib/rabbitmq/.erlang.cookie  root@{{ hostvars[groups['controller'][2]]['ansible_' + MGNT_IF]['ipv4']['address'] }}:/var/lib/rabbitmq/.erlang.cookie
   when:
     - inventory_hostname_short == hostvars[groups['controller'][0]]['inventory_hostname_short']
 
