--- a/roles/install_nova/tasks/service_create.yml
+++ b/roles/install_nova/tasks/service_create.yml
@@ -1,11 +1,40 @@
 ---
-- name: Create info for nova user
-  shell: |
-     source /root/admin-openrc
-     openstack user create --domain default --password {{ nova_pass }} nova
-     openstack role add --project service --user nova admin
-     openstack service create --name nova --description "OpenStack Compute" compute
-     openstack endpoint create --region {{ REGION }} compute public http://{{ IP_VIP }}:8774/v2.1
-     openstack endpoint create --region {{ REGION }} compute internal http://{{ IP_VIP }}:8774/v2.1
-     openstack endpoint create --region {{ REGION }} compute admin http://{{ IP_VIP }}:8774/v2.1
+- name: Create user Nova
+  os_user:
+    name: nova
+    auth: "{{ openstack_auth }}"
+    password: "{{ nova_pass }}"
+    domain: default
   run_once: true
+
+- name: Create role for user Nova
+  os_user_role:
+    auth: "{{ openstack_auth }}"
+    user: nova
+    role: admin
+    project: service
+    state: present
+  run_once: true
+
+- name: Create Compute service
+  os_keystone_service:
+    name: nova
+    auth: "{{ openstack_auth }}"
+    service_type: compute
+    description: Openstack Compute
+  run_once: true
+
+- name: Create endpoint for Nova
+  os_keystone_endpoint:
+     auth: "{{ openstack_auth }}"
+     service: nova
+     endpoint_interface: "{{ item }}"
+     url: http://{{ IP_VIP }}:8774/v2.1
+     region: "{{ REGION }}"
+     state: present
+  with_items:
+    - public
+    - admin
+    - internal
+  run_once: true
+
