--- a/roles/install_placement/tasks/service_create.yml
+++ b/roles/install_placement/tasks/service_create.yml
@@ -1,11 +1,41 @@
 ---
-- name: Create info for placement user
-  shell: |
-        source /root/admin-openrc
-        openstack user create --domain default --password {{ placement_pass }} placement
-        openstack role add --project service --user placement admin
-        openstack service create --name placement --description "Placement API" placement
-        openstack endpoint create --region {{ REGION }} placement public http://{{ IP_VIP }}:8778
-        openstack endpoint create --region {{ REGION }} placement internal http://{{ IP_VIP }}:8778
-        openstack endpoint create --region {{ REGION }} placement admin http://{{ IP_VIP }}:8778
+- name: Create user Placement
+  os_user:
+    name: placement
+    auth: "{{ openstack_auth }}"
+    password: "{{ placement_pass }}"
+    domain: default
   run_once: true
+
+- name: Create role for user Placement
+  os_user_role:
+    auth: "{{ openstack_auth }}"
+    user: placement
+    role: admin
+    project: service
+    state: present
+  run_once: true
+
+- name: Create Placement service
+  os_keystone_service:
+    name: placement
+    auth: "{{ openstack_auth }}"
+    service_type: placement
+    description: Placement API
+  run_once: true
+
+- name: Create endpoint for Placement
+  os_keystone_endpoint:
+     auth: "{{ openstack_auth }}"
+     service: placement
+     endpoint_interface: "{{ item }}"
+     url: http://{{ IP_VIP }}:8778
+     region: "{{ REGION }}"
+     state: present
+  with_items:
+    - public
+    - admin
+    - internal
+  run_once: true
+
+
