--- a/roles/install_glance/tasks/config_glance.yml
+++ b/roles/install_glance/tasks/config_glance.yml
@@ -1,9 +1,16 @@
 ---
+- name: Check /etc/glance/glance-api.conf.bak existed
+  stat:
+    path: /etc/glance/glance-api.conf.bak
+  register: glance_api_conf_bak
+
 - name: Backup file config glance-api.conf
   copy:
-   src: /etc/glance/glance-api.conf
-   dest: /etc/glance/glance-api.conf.bak
-   remote_src: yes
+    src: /etc/glance/glance-api.conf
+    dest: /etc/glance/glance-api.conf.bak
+    remote_src: yes
+  when: 
+    - not glance_api_conf_bak.stat.exists
 
 - name: Config file glance-api.conf
   template:
