--- a/roles/install_nova/tasks/config_nova.yml
+++ b/roles/install_nova/tasks/config_nova.yml
@@ -1,4 +1,17 @@
 ---
+- name: Check /etc/nova/nova.conf.bak existed
+  stat:
+    path: /etc/nova/nova.conf.bak
+  register: nova_conf_bak
+
+- name: Backup file config /etc/nova/nova.conf
+  copy:
+   src: /etc/nova/nova.conf
+   dest: /etc/nova/nova.conf.bak
+   remote_src: yes
+  when:
+    - not  nova_conf_bak.stat.exists
+
 - name: Config file nova.conf
   template:
     src: nova.conf.j2
