--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -28,21 +28,6 @@ MGNT_IF: eth0
 DATA_IF: eth1
 FLAT_IF: eth2
 
-
-### Do not touch :(
-### IP setup var
-MGNT_IP: "{{ hostvars[inventory_hostname]['ansible_' + MGNT_IF]['ipv4']['address'] }}"
-DATA_IP: "{{ hostvars[inventory_hostname]['ansible_' + DATA_IF]['ipv4']['address'] }}"
-FLAT_IP: "{{ hostvars[inventory_hostname]['ansible_' + FLAT_IF]['ipv4']['address'] }}"
-#### MGNT NETWORK setup var
-MGNT_NETWORK: "{{  hostvars[inventory_hostname]['ansible_' + MGNT_IF]['ipv4']['network'] }}"
-MGNT_IPADD: "{{ MGNT_NETWORK }}/{{ MGNT_NETMASK }}"
-MGNT_CIDR: "{{ MGNT_IPADD | ipaddr('net') }}"
-MGNT_NETMASK: "{{  hostvars[inventory_hostname]['ansible_' + MGNT_IF]['ipv4']['netmask'] }}" 
-#### FLAT NETWORK setup var
-FLAT_NETMASK: "{{  hostvars[inventory_hostname]['ansible_' + FLAT_IF]['ipv4']['netmask'] }}"
-
-
 ### Openstack config Auth enviroment
 openstack_auth:
   auth_url: "http://{{ IP_VIP }}:5000/v3"
@@ -51,6 +36,46 @@ openstack_auth:
   project_name: "admin"
   domain_name: "Default"
   user_domain_name: "Default"
+
+
+
+### Services
+enable_openstack_core: "yes"
+
+enable_keystone: "{{ enable_openstack_core | bool }}"
+enable_glance: "{{ enable_openstack_core | bool }}"
+enable_placement: "{{ enable_openstack_core | bool }}"
+enable_nova: "{{ enable_openstack_core | bool }}"
+enable_neutron: "{{ enable_openstack_core | bool }}"
+enable_cinder: "no"
+
+
+
+
+
+
+### Do not touch :(
+### IP setup var
+##### ex: MGNT_IP's output will be "192.168.10.101"
+MGNT_IP: "{{ hostvars[inventory_hostname]['ansible_' + MGNT_IF]['ipv4']['address'] }}"
+DATA_IP: "{{ hostvars[inventory_hostname]['ansible_' + DATA_IF]['ipv4']['address'] }}"
+FLAT_IP: "{{ hostvars[inventory_hostname]['ansible_' + FLAT_IF]['ipv4']['address'] }}"
+#### MGNT NETWORK setup var
+##### ex: MGNT_NETWORK's output will be "192.168.10.0"
+MGNT_NETWORK: "{{  hostvars[inventory_hostname]['ansible_' + MGNT_IF]['ipv4']['network'] }}"
+##### ex: MGNT_IPADD's output will be "192.168.10.0/255.255.255.0"
+MGNT_IPADD: "{{ MGNT_NETWORK }}/{{ MGNT_NETMASK }}"
+##### ex: MGNT_CIDR's output will be "192.168.10.0/24"
+MGNT_CIDR: "{{ MGNT_IPADD | ipaddr('net') }}"
+MGNT_NETMASK: "{{  hostvars[inventory_hostname]['ansible_' + MGNT_IF]['ipv4']['netmask'] }}" 
+#### FLAT NETWORK setup var
+##### ex: FLAT_NETMASK's output will be "255.255.255.0"
+FLAT_NETMASK: "{{  hostvars[inventory_hostname]['ansible_' + FLAT_IF]['ipv4']['netmask'] }}"
+
+
+
+
+
 
 
 
