Update service's tasks
use "my_action" variable to separate action like: deploy. restart_service, reconfigure for OPS service

--- a/roles/install_glance/tasks/configure.yml
+++ b/roles/install_glance/tasks/configure.yml
@@ -17,4 +17,9 @@
     src: glance-api.conf.j2
     dest: /etc/glance/glance-api.conf
 
+- name: Populate the Image service database
+  shell: 
+     su -s /bin/sh -c "glance-manage db_sync" glance
+  run_once: true
+
 
