--- a/roles/install_neutron/tasks/config_neutron.yml
+++ b/roles/install_neutron/tasks/config_neutron.yml
@@ -116,3 +116,7 @@
 - name: link file ml2 config
   shell:  ln -s /etc/neutron/plugins/ml2/ml2_conf.ini /etc/neutron/plugin.ini
 
+
+- name: Populate the database
+  shell:  su -s /bin/sh -c "neutron-db-manage --config-file /etc/neutron/neutron.conf --config-file /etc/neutron/plugins/ml2/ml2_conf.ini upgrade head" neutron
+  run_once: true
