--- a/roles/install_glance/tasks/main.yml
+++ b/roles/install_glance/tasks/main.yml
@@ -1,6 +1,3 @@
 ---
-- include_tasks: bootstrap_glance.yml
-- include_tasks: service_create.yml
-- include_tasks: install_glance.yml
-- include_tasks: config_glance.yml
-- include_tasks: service_register.yml
+- include_tasks: "{{ my_action }}.yml"
+
