--- a/roles/install_keystone/tasks/main.yml
+++ b/roles/install_keystone/tasks/main.yml
@@ -1,7 +1,2 @@
 ---
-- include_tasks: bootstrap_keystone.yml
-- include_tasks: install_keystone.yml
-- include_tasks: config_httpd.yml
-- include_tasks: config_keystone.yml
-- include_tasks: service_register.yml
-- include_tasks: service_create.yml 
+- include_tasks: "{{ my_action }}.yml"
