--- a/roles/install_neutron_ovs/tasks/main.yml
+++ b/roles/install_neutron_ovs/tasks/main.yml
@@ -1,5 +1,2 @@
 ---
-- include_tasks: install_neutron_ovs.yml
-- include_tasks: config_neutron_ovs.yml
-- include_tasks: service_register.yml
-- include_tasks: config_network.yml
+- include_tasks: "{{ my_action }}.yml"
