--- a/roles/install_nova/tasks/config_nova.yml
+++ b/roles/install_nova/tasks/config_nova.yml
@@ -17,4 +17,10 @@
     src: nova.conf.j2
     dest: /etc/nova/nova.conf
 
-
+- name: Populate the nova-api database
+  shell: |
+    su -s /bin/sh -c "nova-manage api_db sync" nova
+    su -s /bin/sh -c "nova-manage cell_v2 map_cell0" nova
+    su -s /bin/sh -c "nova-manage cell_v2 create_cell --name=cell1 --verbose" nova
+    su -s /bin/sh -c "nova-manage db sync" nova
+  run_once: true
