--- a/roles/install_placement/tasks/main.yml
+++ b/roles/install_placement/tasks/main.yml
@@ -1,8 +1,3 @@
 ---
-- include_tasks: bootstrap_placement.yml
-- include_tasks: service_create.yml
-- include_tasks: install_placement.yml
-- include_tasks: config_httpd.yml
-- include_tasks: config_placement.yml
-- include_tasks: service_register.yml
+- include_tasks: "{{ my_action }}.yml"
 
