--- a/roles/install_nova_cell/tasks/main.yml
+++ b/roles/install_nova_cell/tasks/main.yml
@@ -1,5 +1,3 @@
 ---
-- include_tasks: install_nova_cell.yml
-- include_tasks: config_nova_cell.yml
-- include_tasks: service_register.yml
+- include_tasks: "{{ my_action }}.yml"
 
