--- a/roles/baremental/tasks/config_ssh.yml
+++ b/roles/baremental/tasks/config_ssh.yml
@@ -1,19 +1,19 @@
 ---
 - name: config /root/.ssh/id_rsa
-  template:
-    src: id_rsa.j2
+  copy:
+    src: /root/.ssh/id_rsa
     dest: /root/.ssh/id_rsa
     mode: 0400
 
 - name: Config /root/.ssh/id_rsa.pub
-  template:
-    src: id_rsa.pub.j2
+  copy:
+    src: /root/.ssh/id_rsa.pub
     dest: /root/.ssh/id_rsa.pub
     mode: 0400
 
 - name: Config /root/.ssh/authorized_keys
-  template: 
-    src: id_rsa.pub.j2
+  copy:
+    src: /root/.ssh/id_rsa.pub
     dest: /root/.ssh/authorized_keys
     mode: 0400
 
@@ -22,4 +22,5 @@
     src: config.j2
     dest: /root/.ssh/config
     mode: 0600
-    
+
+
