--- a/roles/install_keystone/tasks/deploy.yml
+++ b/roles/install_keystone/tasks/deploy.yml
@@ -4,5 +4,5 @@
 - include_tasks: install.yml
 - include_tasks: config_httpd.yml
 - include_tasks: config_keystone.yml
-- include_tasks: service_restart.yml
+- include_tasks: restart_service.yml
 - include_tasks: register.yml 
