--- a/roles/install_neutron_ovs/tasks/config_neutron_ovs.yml
+++ b/roles/install_neutron_ovs/tasks/config_neutron_ovs.yml
@@ -1,16 +1,29 @@
 ---
+- name: Check /etc/neutron/neutron.conf.bak existed
+  stat:
+    path: /etc/neutron/neutron.conf.bak
+  register: neutron_compute_conf_bak
+
+- name: Check /etc/neutron/plugins/ml2/openvswitch_agent.ini.bak existed
+  stat:
+    path: /etc/neutron/plugins/ml2/openvswitch_agent.ini.bak
+  register: openvswitch_compute_agent_ini_bak
+  
 - name: Backup file config neutron.conf
   copy:
    src: /etc/neutron/neutron.conf
    dest: /etc/neutron/neutron.conf.bak
    remote_src: yes
-
+  when:
+    - not neutron_compute_conf_bak.stat.exists
 
 - name: Backup file openvswitch_agent.ini
   copy:
    src: /etc/neutron/plugins/ml2/openvswitch_agent.ini
    dest: /etc/neutron/plugins/ml2/openvswitch_agent.ini.bak
    remote_src: yes
+  when:
+    - not openvswitch_compute_agent_ini_bak.stat.exists
 
 - name: Config file neutron.conf
   template:
