--- a/roles/install_nova_cell/tasks/config_nova_cell.yml
+++ b/roles/install_nova_cell/tasks/config_nova_cell.yml
@@ -1,10 +1,17 @@
 ---
+- name: Check /etc/nova/nova.conf.bak existed
+  stat:
+    path: /etc/nova/nova.conf.bak
+  register: nova_compute_conf_bak
+
 - name: Backup file config nova.conf
   copy:
    src: /etc/nova/nova.conf
    dest: /etc/nova/nova.conf.bak
    remote_src: yes
-
+  when:
+    - not  nova_compute_conf_bak.stat.exists
+    
 - name: Config file nova.conf
   template:
     src: nova.conf.j2
