--- a/Deploy_OPS_main.yml
+++ b/Deploy_OPS_main.yml
@@ -32,7 +32,7 @@
 
 
 - name: Apply role Rabbimq
-  gather_facts: true
+  gather_facts: false
   become: true
   hosts: controller
   roles:
@@ -82,7 +82,7 @@
         tags: install_glance }
 
 - name: Apply role Placement
-#  gather_facts: true
+  gather_facts: false
   become: true
   hosts: controller
   roles:
@@ -90,7 +90,7 @@
         tags: install_placement }
 
 - name: Apply role Nova
-#  gather_facts: true
+  gather_facts: false
   become: true
   hosts: controller
   roles:
@@ -106,7 +106,7 @@
         tags: install_nova_cell }
 
 - name: Apply role Neutron
-#  gather_facts: true
+  gather_facts: false
   become: true  
   hosts: controller
   roles:
@@ -123,7 +123,7 @@
 
 
 - name: Apply role Horizon
-#  gather_facts: true
+  gather_facts: false
   become: true
   hosts: controller
   roles:
