--- a/Deploy_OPS_main.yml
+++ b/Deploy_OPS_main.yml
@@ -71,7 +71,8 @@
   hosts: controller
   roles:
     - { role: install_keystone,
-        tags: install_keystone }
+        tags: install_keystone,
+        when: enable_keystone | bool }
 
 - name: Apply role Glance
   gather_facts: false
@@ -79,7 +80,8 @@
   hosts: controller
   roles:
     - { role: install_glance,
-        tags: install_glance }
+        tags: install_glance,
+        when: enable_glance | bool }
 
 - name: Apply role Placement
   gather_facts: false
@@ -87,7 +89,8 @@
   hosts: controller
   roles:
     - { role: install_placement,
-        tags: install_placement }
+        tags: install_placement,
+        when: enable_placement | bool }
 
 - name: Apply role Nova
   gather_facts: false
@@ -95,7 +98,8 @@
   hosts: controller
   roles:
     - { role: install_nova,
-        tags: install_nova }
+        tags: install_nova,
+        when: enable_nova | bool }
 
 - name: Apply role Nova_cell
   become: true
@@ -103,7 +107,8 @@
   hosts: compute
   roles: 
     - { role: install_nova_cell,
-        tags: install_nova_cell }
+        tags: install_nova_cell,
+        when: enable_nova | bool }
 
 - name: Apply role Neutron
   gather_facts: false
@@ -111,7 +116,8 @@
   hosts: controller
   roles:
     - { role: install_neutron,
-        tags: install_neutron }
+        tags: install_neutron,
+        when: enable_neutron |bool }
 
 - name: Apply role Neutron_openvswitch
   become: true
@@ -119,8 +125,17 @@
   hosts: compute
   roles:
     - { role: install_neutron_ovs,
-        tags: install_neutron_ovs }
+        tags: install_neutron_ovs,
+        when: enable_neutron | bool }
 
+- name: Apply  role Cinder
+  become: true
+  garther_facts: false
+  host: controller
+  roles: 
+    - { role: install_cinder,
+        tags: install_cinder,
+        when: enable_cinder | bool }
 
 - name: Apply role Horizon
   gather_facts: false
@@ -128,6 +143,7 @@
   hosts: controller
   roles:
     - { role: install_horizon,
-        tags: install_horizon }
+        tags: install_horizon,
+        when: enable_horizon | bool }
 
 
