--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -49,8 +49,8 @@ enable_glance: "{{ enable_openstack_core | bool }}"
 enable_placement: "{{ enable_openstack_core | bool }}"
 enable_nova: "{{ enable_openstack_core | bool }}"
 enable_neutron: "{{ enable_openstack_core | bool }}"
-enable_cinder: "no"
-
+enable_cinder: "yes"
+enable_lvm: "yes"
 
 ### Create VMs
 #### Selfservice network info:
