--- a/roles/install_mariadb/tasks/config_cluster.yml
+++ b/roles/install_mariadb/tasks/config_cluster.yml
@@ -19,7 +19,8 @@
 - name: Create Galera Cluster
   shell: /usr/bin/galera_new_cluster
   when:
-    - inventory_hostname_short ==  hostvars[groups['controller'][0]]['inventory_hostname_short']	
+    - inventory_hostname_short ==  hostvars[groups['controller'][0]]['inventory_hostname_short']
+    - groups['controller'] | length  > 1
 - name: Start mariadb 
   systemd:
     state: started
