--- a/roles/install_rabbitmq/tasks/create_user_rabbitmq.yml
+++ b/roles/install_rabbitmq/tasks/create_user_rabbitmq.yml
@@ -4,9 +4,15 @@
       rabbitmqctl add_user openstack {{ rabbitmq_pass }}
       rabbitmqctl set_permissions openstack ".*" ".*" ".*"
       rabbitmqctl set_user_tags openstack administrator
+  when:
+    - inventory_hostname_short ==  hostvars[groups['controller'][0]]['inventory_hostname_short']
+
+- name: Config Policy
+  shell: |    
       rabbitmqctl set_policy ha-all '^(?!amq\.).*' '{"ha-mode": "all"}'   
   when:
     - inventory_hostname_short ==  hostvars[groups['controller'][0]]['inventory_hostname_short']
+    - groups['controller'] | length  > 1
 #- name: ensure the default vhost contains the HA policy via a dict
 #  rabbitmq_policy:
 #    name: ha-all
